--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
 
 <p>My first paragraph.</p>
 <p>My second paragraph.</p>
-<embed src='http://player.youku.com/player.php/sid/XMjUwNTc2MTg1Ng==/v.swf' allowFullScreen='true' quality='high' width='480' height='400' align='middle' allowScriptAccess='always' type='application/x-shockwave-flash'></embed>
+<iframe height=498 width=510 src='http://player.youku.com/embed/XMjUwNTc2MTg1Ng==' frameborder=0 'allowfullscreen'></iframe>
 
 </body>
 </html>
