--- a/www/index.html
+++ b/www/index.html
@@ -3,9 +3,10 @@
 
 <h1>Big Young Demo Page</h1>
 
-<p>My first paragraph.</p>
-<p>My second paragraph.</p>
+<p>This is only a very simple demo for Big Young Page. I don't have much time to make it better, but if you are intersted you can see the github link at the end of this page. We can make this page together.</p>
+<p>Moreover, as this server is my private server, I will close the http service in a few days. Maybe a server from our company can take this job. I have tried before but permission needed to install Apache.</p>
 <iframe height=498 width=510 src='http://player.youku.com/embed/XMjUwNTc2MTg1Ng==' frameborder=0 'allowfullscreen'></iframe>
+<p>https://github.com/4MT-HJM/BigYoungHtmlPage</p>
 
 </body>
 </html>
